--- a/booking.html
+++ b/booking.html
@@ -65,7 +65,7 @@
     <div class="container">
       <h3 class="form__title">Book Table</h3>
       <div class="form__wrapper">
-        <form name="booking" method="POST" netlify>
+        <form action="./index.html" method="GET" name="booking" id="bookingform"  netlify>
           <div class="form__group">
             <label for="firstName">First Name</label>
             <input type="text" id="firstName" name="First Name" required>
@@ -112,7 +112,7 @@
             <label for="note">Note</label>
             <textarea name="Note" id="note" rows="4"></textarea>
           </div>
-          <button type="submit" class="btn primary-btn">Book Table</button>
+          <button type="submit" class="btn primary-btn" onclick="reservation()">Book Table</button>
         </form>
       </div>
     </div>
